# algorithmicrobotics_david

./: .gitignore  LICENSE.md  README.md  offboard_640_480_timings.txt  offboard_compressed_640_480_timings  offboard_compressed_static_1920_1080_timings.txt  offboard_compressed_static_640_480  offboard_static_1920_1080_timings.txt  offboard_static_640_480_timings  onboard_640_480_timings.txt  onboard_static_1920_1080_timings.txt  onboard_static_648_480_timings  rosbag_to_csv.py
adafruit_drivers/: CMakeLists.txt  package.xml  setup.py
agitr/: pubvel.cpp  subpose.cpp
anti_instagram/: CMakeLists.txt  setup.py
anti_instagram/include/anti_instagram/: AntiInstagram.py  naive_bgr_scaling.py  scale_and_shift.py
anti_instagram/launch/: anti_instagram_node.launch  anti_instagram_test.launch
anti_instagram/src/: anti_instagram_node.py
ar_tags/: CMakeLists.txt  package.xml  pyjnius_note_sheet  setup.py
ar_tags/include/hampy/: README.md  detect.py
ar_tags/src/: tag_detector_node.py  tag_detector_remote.py  tag_node.py
ar_tags/src/zxing/: __init__.py
camcal/: calibrate.py  capture.py
dagu_car/: CMakeLists.txt  package.xml
dagu_car/include/dagu_car/: __init__.py
dagu_car/launch/: dagu_car.launch  inverse_kinematics_node.launch
dagu_car/script/: dagu_wheels_driver.py  drive_straight_test.py  kinematics_node.py  spin_test.py  wheels_driver_node.py
dagu_car/src/: dagu_wheels_driver.py  kinematics_node.py  wheels_driver_node.py
duckietown/: CMakeLists.txt  env.sh  machines  package.xml
duckietown/config/line_detector/: config.yaml
duckietown/config/pi_camera/calib_intrinsic/: default.yaml
duckietown/launch/: ar_tags.launch  final_project.launch  final_project_ar.launch  ground_projection.launch  intrinsic_calibration.launch  keyboard_control.launch  keyboard_control.launch_back  keyboard_control_modified.launch  lab_7_planner.launch  lab_8_dead_reckoning.launch  lane_control.launch  lane_control_remote.launch  lane_controller.launch  lane_filter.launch  line_detector.launch  localization.launch  stop_line_control.launch  test_camcalib.launch
duckietown_msgs/: CMakeLists.txt  package.xml
duckietown_msgs/msg/: Tag.msg
duckietown_msgs/srv/: SetParam.srv
final_project/: CMakeLists.txt  package.xml
final_project/src/: searcher.py
ground_projection/: CMakeLists.txt
ground_projection/scripts/: test_projection.py  test_projection_auto.py
ground_projection/src/: ground_projection.cpp
intersection_control/: CMakeLists.txt  package.xml
intersection_control/config/: maneuvers.yaml
intersection_control/src/: supervisor_node.py
ir_dist/: CMakeLists.txt  package.xml
ir_dist/src/: get_ir_dist_node.py
keyboard_control/: CMakeLists.txt  package.xml
keyboard_control/script/: keyboard_control_node.py
lab_7_planning/: CMakeLists.txt  package.xml
lab_7_planning/config/: maneuvers.yaml  town_map.yaml
lab_7_planning/src/: planner_node.py  stop_line_filter_node.py
lane_control/: CMakeLists.txt  package.xml
lane_control/src/: lane_controller_node.py  lane_controller_node.py_back
lane_filter/: CMakeLists.txt
lane_filter/src/: lane_filter_node.py
line_detector/config/: params.yaml  params.yaml_birght_yellow
line_detector/include/line_detector/: instantiate_utils.py  line_detector1.py  line_detector2.py
line_detector/src/: line_detector_node.py
localization/: CMakeLists.txt  package.xml
localization/config/: landmarks.yaml
localization/src/: loc_vis_node.py  localization_node.py
pi_camera/: CMakeLists.txt  package.xml
pi_camera/launch/: camera.launch  camera_compressed.launch  camera_insta.launch  camera_theora.launch
pi_camera/src/: cam_info_node.py  camera_node.py  decoder_node.py
teleop/: camera_preview.py  dagudrive.py  keyboard_control.py
