<?xml version="1.0"?>
<package>
  <name>adafruit_drivers</name>
  <version>0.0.0</version>
  <description>Adafruit drivers for the hardware.</description>

  <maintainer email="zhangz17@school.edu">zhangz17</maintainer>
  <maintainer email="horakp@school.edu">horakp</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>