<?xml version="1.0"?>
<package>
  <name>duckietown</name>
  <version>0.0.0</version>
  <description>Meta package for launch files that use multiple duckietown packages</description>

  <maintainer email="zhangz17@school.edu">zhangz17</maintainer>
  <maintainer email="horakp@school.edu">horakp</maintainer>

  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>