<?xml version="1.0"?>
<package>
  <name>keyboard_control</name>
  <version>0.0.0</version>
  <description>Publishes car velocities based on keyboard input.</description>

  <maintainer email="zhangz17@school.edu">zhangz17</maintainer>
  <maintainer email="horakp@school.edu">horakp</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- TODO: add _build and _run dependencies -->
</package>
