<?xml version="1.0"?>
<package>
  <name>keyboard_control</name>
  <version>0.0.0</version>
  <description>Publishes car velocities based on keyboard input</description>

  <maintainer email="zhangz17@school.edu">zhangz17</maintainer>
  <maintainer email="horakp@school.edu">horakp</maintainer>

  <license>GPLv2</license>

<!-- the follwoing three lines were added. There didn't turn out to be any build depenancies (since it's all python) -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>duckietown_msgs</run_depend>
</package>

