<?xml version="1.0"?>
<package>
  <name>lab_7_planning</name>
  <version>0.0.0</version>
  <description>automatically traverses from one street to another, demonstrating simple map based planning</description>

  <maintainer email="zhangz17@school.edu">zhangz17</maintainer>
  <maintainer email="horakp@school.edu">horakp</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
