<?xml version="1.0"?>
<package>
  <name>lane_control</name>
  <version>1.0.0</version>
  <description>Feedback controller to keep duckiebot in lane</description>

  <maintainer email='zhangz17@school.edu'>zhangz17</maintainer>
  <maintainer email='horakp@school.edu'>horakp</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
